2011-09-20  Gopal Raghavan  <gopal.1.raghavan@nokia.com>

        [Qt] QTouchWebView missing signal tests for loadProgress
        https://bugs.webkit.org/show_bug.cgi?id=68442

        Reviewed by Chang Shu.

        Added test case to check load progress signal for QTouchWebView

        * UIProcess/API/qt/tests/qmltests/TouchWebView/tst_loadProgressSignal.qml: Added.
        * UIProcess/API/qt/tests/qmltests/qmltests.pro:

2011-09-20  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r95565.
        http://trac.webkit.org/changeset/95565
        https://bugs.webkit.org/show_bug.cgi?id=68470

        Broke builds (Requested by andersca on #webkit).

        * GNUmakefile.am:
        * Shared/API/c/WKHitTestResult.cpp: Removed.
        * Shared/API/c/WKHitTestResult.h: Removed.
        * UIProcess/API/C/WebKit2.h:

2011-09-20  Alexis Menard  <alexis.menard@openbossa.org>

        [Qt] [WK2] Implement a persistent cookie storage.
        https://bugs.webkit.org/show_bug.cgi?id=65309

        Reviewed by Chang Shu.

        Add parameter to the WebProcess creation to specify where cookies should be saved.
        It also use the new cookie storage implementation and set it to our network stack
        so cookies are used when using it.

        * Shared/WebProcessCreationParameters.cpp:
        (WebKit::WebProcessCreationParameters::encode):
        (WebKit::WebProcessCreationParameters::decode):
        * Shared/WebProcessCreationParameters.h:
        * UIProcess/qt/WebContextQt.cpp:
        (WebKit::WebContext::platformInitializeWebProcess):
        * WebProcess/qt/WebProcessQt.cpp:
        (WebKit::WebProcess::platformInitializeWebProcess):
        (WebKit::WebProcess::platformTerminate):

2011-09-20  Nayan Kumar K  <nayankk@motorola.com>

        Added WKHitTestResult API's.

        WKHitTestResult API's are added. These API's can be used to
        get the hover'ed link/image/media URL as well as link lable and
        title.