@@ -1,3 +1,15 @@
+2011-09-20  Anders Carlsson  <andersca@apple.com>
+
+        Get rid of PluginView::setBoundsSize from WebKit2
+        https://bugs.webkit.org/show_bug.cgi?id=68489
+
+        Reviewed by Dan Bernstein.
+
+        Remove m_boundsSize and the setter since they aren't used anywhere.
+
+        * WebProcess/Plugins/PluginView.cpp:
+        * WebProcess/Plugins/PluginView.h:
+
 2011-09-20  Gopal Raghavan  <gopal.1.raghavan@nokia.com>
 
         [Qt] QTouchWebView missing signal tests for loadProgress
